--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 # MacOS
 .DS_Store
 
-# Ignore .ged files
-*.ged
-
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -33,3 +29,6 @@ pip-delete-this-directory.txt
 .venv
 venv/
 env/
+
+# Ignore all files in tests/data folder
+tests/data/*
