--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "simple-gedcom"
 version = "1.0.3"
-description = "A Python module for parsing and analyzing GEDCOM files."
+description = "A Python module for reading and extracting data from GEDCOM files."
 readme = "README.md"
 authors = [{name = "mcobtechnology"}]
 license = {text = "GPLv2"}
