--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=39.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "simple-gedcom"
-version = "1.0.3"
+name = "simple_gedcom"
+version = "1.0.4"
 description = "A Python module for reading and extracting data from GEDCOM files."
 readme = {file = "README.md", content-type = "text/markdown"}
 authors = [{name = "mcobtechnology"}]
